# MSU_LinuxDev2020

./: .gitignore  README.md
03_TerminalProject/: Makefile  Show  Show.c
04_Multifile/: .gitignore  Makefile  fun.c
05_Environmental/: CMakeLists.txt  Window.c  pcredemo.c
06_Debugging/: double-free.c
07_DebuggingTracing/: .gitignore  Makefile  wrapper.c
08_TestingCoverage/: CMakeList.txt  Makefile
08_TestingCoverage/src/: CMakeLists.txt  buf.c  buf.h  main.c
08_TestingCoverage/test/: clear.ts  init.ts  push.ts
09_I18nL10n/: .gitignore  Makefile  bin_search.c  bin_search.pot  bin_search.ru.po  test.c
10_Documenting/: .gitignore  Doxyfile  Makefile  README.md  bin_search.c  bin_search.ru.po  test.c
10_Documenting/man/man1/: bin_search.1
11_Toolkits/: Makefile  hashTable  hashTable.c  test.txt
12_ScriptingText/: .gitignore  Makefile.am  configure.ac
12_ScriptingText/src/: .gitignore  Makefile.am  buf.h  libbuf.c
12_ScriptingText/test/: .gitignore  Makefile.am  grow.ts  pop.ts
13_PatchInstall/: .gitignore  Makefile  README.md
